more chnges in sections 1-3

--- a/CogNAP_paper.Rmd
+++ b/CogNAP_paper.Rmd
@@ -419,7 +419,7 @@ has a limited impact on syllables with simple onsets and/or codas (e.g., CVC). T
 play a role chiefly when sequences of consonants are syllabified within a single syllable as complex onset/coda clusters (e.g., **C**CVC**C**). The phonotactics of these possible sequences are determined, to a large extent, by sonority principles. We interpret this aspect of cluster phonotactics such that sequences within syllables are avoided the more they increase the potential competition for the nucleus in the process of syllabifying/parsing the stream of speech.
 
 (ref:nap-depictions) Schematic depictions of competition scenarios with symbolic CCV structures. The purple portions denote the winning vowel in the nucleus position while the blue portions denote the losing portions in the complex onset cluster. The five examples with specified consonantal clusters exhibit their related energy depicted as the area under the curve, i.e., the integral sum of duration and power, which we refer to as *mass*. The nucleus competition can be understood as the competition between the blue mass and the purple mass. The two examples at the top row---*plV* and *lpV*---suggest replication of successful traditional predictions while the three examples at the bottom row---*spV*, *sfV* and *nmV*---suggest a divorce from inherent failures of SSP-type models (see text for more details).
-<!-- (left) and with a continuous energy curve, exemplified with the onset cluster *npV* (right). We estimate the competition potential of CCV structures in discrete terms as the difference between *C*~1~ (the first consonant, in blue) and the non-adjacent vowel (*V*, in purple) whereby the vowel is expected to win the competition (connected to the nucleus with a solid arrow) and *C*~1~ is expected to lose (connected to the nucleus with a dashed arrow). In continuous terms, sonority is measured as the integral of duration and amplitude (i.e., the area under the curve), which we consider as a *mass*. As illustrated in the onset cluster *npV* (right), the mass of the nasal /n/ at the beginning of the syllable (the blue area under the curve) is smaller than the mass of the non-adjacent vowel (the purple area under the curve), yet big enough to substantially compete with the vowel for the nucleus. -->
+<!-- (left) and with a continuous energy curve, exemplified with the onset cluster *npV* (right). We estimate the competition potential of CCV structures in discrete terms as the difference between *C*~1~ (the first consonant, in blue) and the non-adjacent vowel (*V*, in purple) whereby the vowel is expected to win the competition (connected to the nucleus with a solid arrow) and *C*~1~ is expected to lose (connected to the nucleus with a dashed arrow). In continuous terms, sonority is measured as the integral of duration and power (i.e., the area under the curve), which we consider as a *mass*. As illustrated in the onset cluster *npV* (right), the mass of the nasal /n/ at the beginning of the syllable (the blue area under the curve) is smaller than the mass of the non-adjacent vowel (the purple area under the curve), yet big enough to substantially compete with the vowel for the nucleus. -->
 ```{r nap-depictions, fig.cap = "(ref:nap-depictions)", fig.show='hold', out.width = c('30%', '30%', '30%'), fig.align = 'center'}
 
 knitr::include_graphics(rep(c("extrenal_figures/NAP_CCV_small.jpg", "extrenal_figures/NAP_plV_small.jpg", "extrenal_figures/NAP_lpV_small.jpg","extrenal_figures/NAP_spV_small.jpg", "extrenal_figures/NAP_sfV_small.jpg", "extrenal_figures/NAP_nmV_small.jpg")))
@@ -690,7 +690,7 @@ The question of competition may be thus expressed by the following questions:
 Assessing this relationship between *C*~1~ and *V* given *C*~2~ is thus achieved by the combination of two subtraction formulas: 
 (i) a calculation of the difference between *C*~1~ and the non-adjacent vowel, to reflect the potential strength of *C*~1~ in terms of the intercept relative to the nucleus, and;
 (ii) a calculation of the slope between adjacent *C*~1~ and *C*~2~, just like in the SSP model, to reflect energy retention towards the peak. 
-This can be summarized with the formula in \@ref(eq:naptdeq), see examples in Table (\@ref(tab:ordinalscores)).[^cf-15]
+This can be summarized with the formula in \@ref(eq:naptdeq), see examples in Table (\@ref(tab:ordinalscores)).[^cf-angle]
 
 \begin{equation}
 (V - C_1) + (C_2 - C_1)  \label{eq:naptdeq}
@@ -773,9 +773,24 @@ monosyl_examp_1_plot <-
 print(monosyl_examp_1_plot)
 ```
 
-There are various ways to calculate an estimation of the nucleus competition potential within syllables based on the periodic energy data of the acoustic signal. The method that we present here has the advantage of not relying on segmental landmarks that would have been the result of separate segmentation and annotation processes. Segmentation of the signal into non-overlapping consonants and vowels is theoretically arguable (the transition between segments does not tend to occur at a single point in time), it is error-prone and it requires labor-intensive resources.
+There are various ways to calculate an estimation of the nucleus competition potential within syllables based on the periodic energy data of the acoustic signal. The method that we present here has the advantage of not relying on segmental landmarks that 
+are not noncontroversial in terms of their psychological reality and the problematic assumption they entail regarding linearly ordered non-overlapping consonants and vowels (given that the transition between segments does not tend to occur at a single point in time). Furthermore, segmental boundaries are the result of separate segmentation and annotation processes, either manual, automatic, or a combination of both. Thus, the segmentation of the signal into non-overlapping consonants and vowels is theoretically and methodologically arguable, it is error-prone and it requires labor-intensive resources.
 
-We view the periodic energy data in terms of a *mass*, i.e., the area under the periodic energy curve. It is therefore of interest to locate the *center of mass* within regions of interest as a measurement that is sensitive to the two axes of the periodic energy mass---duration (x-axis) and amplitude (y-axis). The center of mass can be viewed as the point in time in which the area under the curve is split into two equal parts. The location of the center of mass in time (x-axis) is attracted to the peak of the curve (on the y-axis), where it is expected to be found with a perfectly symmetric shape. However, the center of mass most often diverges from the peak of rise-fall curves so as to reflect asymmetries in the overall distribution of the mass, either leftward or rightward. The center of mass of the periodic energy curve (henceforth CoM) follows a methodology that was introduced with the Tonal Center of Gravity [@barnes2012tonal] by calculating a weighted average time point that uses a continuous time series as the weighting term. Thus, we use the equation in \@ref(eq:com) to locate the average point in time (*t*), weighted by continuous periodic energy (*per*) at discrete time points (every 10 ms):
+We view the periodic energy data in terms of a *mass*, i.e., the area under the periodic energy curve, representing the periodic quality of the signal by integrating quantities from both duration and power; the two inseparable dimensions of all acoustic signals. In that sense, we choose to use a summing approach to represent the quantity of sonority. Note that quantities that are derivable from regions of continuous curves can employ one of three general strategies---summing, averaging or extraction of peaks (local minima and maxima). These three measurement strategies differ greatly in the contribution they delegate to the duration dimension.
+High or low peaks are directly informative with respect to one point in time, thus not accounting for the duration of the measured quality at all.[^cf-peak] 
+Averaging takes measurements from the whole duration of a unit, but the duration component itself is neutralized in the final calculation.
+<!-- allows the whole duration of a unit to be accounted for, yet it neutralizes the contribution of duration itself. -->
+Summing also takes measurements from the whole duration of a unit, but, in contrast to averaging, summing 
+allows the accumulation of the individual measurements, keeping the contribution of the duration component in the final calculation.
+Thus, unlike summing, peak extraction and averaging cannot tell the quantitative difference between two periodic sounds that differ in duration if they have the exact same amplitude envelope. 
+
+<!-- Thus, for two periodic sounds that have the exact same amplitude envelope yet they differ in duration, peak measurement and averaging will not be able to point at any quantitative differnce between the two sounds. Only summing can. -->
+<!-- Peak points in continuous curves completely ignore the duration of the measured units while averaging allows the whole duration of a unit to be accounted for, yet it neutralizes the contribution of duration itself.[^cf-peak]  -->
+<!-- Peak points in continuous curves completely ignore the duration of the measured units while averaging allows the whole duration of a unit to be accounted for, yet it neutralizes the contribution of duration itself.[^cf-peak]  -->
+
+The contribution of duration to sonority was strongly supported in the seminal work of @price1980sonority, wherby the perception of disyllabic English words like *polite* /p\textschwa\textprimstress l\textturnv\textsci t/ was shown to take place when the duration of the sonorant /l/ in the superficially related monosyllabic word *plight* /pl\textturnv\textsci t/ was manipulted, essentially leading to the perception of another syllable when the durtion of the sonorant was increased. Importantly, the periodic energy mass, which is the sum integral of power and duration, is the only measurement of the three alternatives for countinuous curve measurement---sum, average or peak---that is capable of accounting for the data in @price1980sonority.
+
+It is therefore of interest to locate the *center of mass* within regions of interest as a measurement that is sensitive to the two axes of the periodic energy mass---duration (x-axis) and power (y-axis). The center of mass can be viewed as the point in time in which the area under the curve is split into two equal parts. The location of the center of mass in time (x-axis) is attracted to the peak of the curve (on the y-axis), where it is expected to be found with a perfectly symmetric shape. However, the center of mass most often diverges from the peak of rise-fall curves so as to reflect asymmetries in the overall distribution of the mass, either leftward or rightward. The center of mass of the periodic energy curve (henceforth CoM) follows a methodology that was introduced with the Tonal Center of Gravity [@barnes2012tonal] by calculating a weighted average time point that uses a continuous time series as the weighting term. Thus, we use the equation in \@ref(eq:com) to locate the average point in time (*t*), weighted by continuous periodic energy (*per*) at discrete time points (every 10 ms):
 
 \begin{equation}
 \frac{\sum_i per_i t_i}{\sum_i per_i}  \label{eq:com}
@@ -783,11 +798,38 @@ We view the periodic energy data in terms of a *mass*, i.e., the area under the 
 
 The location of the center of periodic energy mass of the entire syllable (henceforth *CoM~syl~*) guides us to the point in time where the periodic mass of all the competing forces within that syllable are split into two equal parts. Once we obtain this reference point we can repeat this process within the resulting left-side portion, i.e., from the beginning of the syllable up to *CoM~syl~*, to focus on the onset position (henceforth *CoM~ons~*).
 We therefore measure the center of mass twice---first for the entire syllable (resulting in *CoM~syl~*) and then for the left portion of the first measurement (resulting in *CoM~ons~*). 
-The distance between *CoM~syl~* and *CoM~ons~* is indicative of the amount of displacement of energy away from the center of the syllable, which we interpret as reflective of the degree of nucleus competition (see Figure \@ref(fig:com-4examples-1)).[^cf-12]
+The distance between *CoM~syl~* and *CoM~ons~* is indicative of the amount of displacement of energy away from the center of the syllable, which we interpret as reflective of the degree of nucleus competition (see Figure \@ref(fig:com-4examples-1)).[^cf-loess]
 
 The center of mass is capable of capturing both components of a two-dimensional mass, considering the non-linear shape of the periodic energy curve. 
 The leftward displacement of *CoM~ons~* relative to *CoM~syl~* is affected by the distance, the amplitude and the amount of discontinuity between the periodic energy at the onset and the center of mass of the entire syllable.
 Any increase in the above results in a larger distance between the two centers of mass as Figure \@ref(fig:com-4examples-1) demonstrates.
+
+<!-- (ref:com-4examples-2) Smoothed periodic energy curve (black) of the four syllables from the experimental stimuli---*npal*, *nmal*, *spal* and *sfal* (other details, same as in similar figure above). -->
+<!-- ```{r com-4examples-2,fig.cap = "(ref:com-4examples-2)", fig.asp=.75, fig.asp=.6, warning=FALSE} -->
+<!-- monosyl_examp_2 <- filter(monosyl_info, -->
+<!--                           syl %in% c("sfal","spal","nmal","npal")) -->
+<!-- ordered_syl_abs <- unique(monosyl_examp_2[order(monosyl_examp_2$NAP_bu),]$syl) -->
+<!-- monosyl_examp_2$syl <- factor(monosyl_examp_2$syl, levels=ordered_syl_abs) -->
+<!-- monosyl_examp_2_plot <- -->
+<!--   ggplot(monosyl_examp_2, aes(x=t)) + -->
+<!--   xlim(0,475) + ylim(-3,19) + #ggtitle("") + -->
+<!--   xlab("time (ms)") + ylab("Periodic energy (relative scale)") + -->
+<!--   geom_line(aes(y=smog_per), color="black", alpha=1, size=1) + -->
+<!--   # -->
+<!--   geom_segment(aes(x=x_com_ons, xend=x_com_ons, y=-1, yend=13), color="royalblue1", size=1.7, alpha=.7, linetype = "solid", lineend = "round") + -->
+<!--   geom_segment(aes(x=x_com_syl, xend=x_com_syl, y=-1, yend=13),color="red", size=1.7, alpha=.6, linetype = "solid", lineend = "round") + -->
+<!--   geom_text(aes(x=com_onset,y=15,label="CoM:ons"), nudge_x = -20, color="royalblue2", alpha=1, size=3, family = "Times", check_overlap=T, na.rm = T) + -->
+<!--   geom_text(aes(x=x_com_syl,y=15,label="CoM:syl"), nudge_x = 20, color="red", alpha=.9, size=3, family = "Times", check_overlap=T, na.rm = T) + -->
+<!--   geom_segment(aes(x=x_com_syl, xend=com_onset, y=-.75, yend=-.75), color="black", size=.5, alpha=1, linetype = "solid", arrow = arrow(length = unit(0.04, "npc"))) + -->
+<!--   geom_text(aes(x=(x_com_syl+com_onset)/2,y=-2.5,label=paste0(round(NAP_bu)," ms")), size=3, family = "Times", check_overlap=T) + -->
+<!--   # -->
+<!--   geom_segment(aes(x=pos_end, xend=pos_end, y=0, yend=19), color="grey", size=.5, alpha=.2, linetype = "dotted") + -->
+<!--   geom_text(aes(x=pos_mid,y=18,label=text), size=6, family = "Times", check_overlap=T) + -->
+<!--   # -->
+<!--   facet_wrap(~syl, ncol=2) + -->
+<!--   theme(panel.background = element_blank(), axis.title = element_text(size = 12, family="Times"), axis.text.y = element_blank(), axis.ticks = element_blank(), axis.text.x = element_text(size = 8, family="Times"), strip.text = element_blank()) -->
+<!-- print(monosyl_examp_2_plot) -->
+<!-- ``` -->
 
 <!-- ##		NAP advantages {#sec:advantages} -->
 <!-- Before we turn to the experiment, the advantages of NAP over traditional models can be already glimpsed over with four examples that illustrate major differences in the models' predictions. Consider the clusters in the syllables *spV* (an /s/-stop cluster), *sfV* (a voiceless fricative plateau), *nmV* (a nasal plateau) and *npV* (a sonority fall from sonorant to voiceless). In traditional sonority slope terms, all of these clusters are either highly ill-formed (i.e., sonority falls) or border-line ill- /well-formed (i.e., sonority plateaus). Predictions may slightly differ with different sonority hierarchies, such that these examples can represent three sonority plateaus and one fall with the *col* hierarchy (*spV* $=$ *sfV* $=$ *nmv* $<$ *npV*), or two plateaus and two falls with the *exp* hierarchy (*sfV* $=$ *nmV* $<$ *spV* $=$ *npv*). -->
@@ -795,7 +837,6 @@ Any increase in the above results in a larger distance between the two centers o
 <!-- The visual representation in Figure \@ref(fig:slopes4examples) highlights the irrelevance of the intercept of clusters (i.e., their overall height on the y-axis) in traditional sonority formalizations---only the general trend of the slope matters. -->
 
 <!-- In contrast to the traditional approach, NAP is explicitly concerned with energetic quantities that compete for the nucleus and therefore considers the intercept of the onset cluster as a crucial variable. In NAP terms, the two voiceless clusters *spV* and *sfV* have only minimal, if any, sonorant energy (effectively zero periodic mass) that would make the onset a serious competitor for the nucleus, regardless of the slope. Therefore, even if *spV* exhibits a sonority fall it should not pattern with *npV* in terms of ill-formedness. Likewise, if we consider *spV* as a plateau, neither *spV* nor *sfV* should pattern with *nmV* just because they are all considered plateaus. The two nasal-initial clusters, *nmV* and *npV*, should in fact be considered as much worse-formed than the the two /s/-initial voiceless clusters given their distribution within and across languages. Previous works by @greenberg1965some; @greenberg1978some; @lindblom1983production; @lombardi1995laryngeal; @lombardi1991laryngeal; @kreitman2008phoneticssk; @kreitman2010mixed have basically confirmed (although with some considerable differences) that voiceless initial consonant clusters are less *marked* (more common) than voiced clusters, and both types of clusters are less marked than a voiced-voiceless initial cluster. Such hierarchy is reflected in the rationale of NAP, but not in any of the traditional sonority models. -->
-
 
 <!-- (ref:slopes4examples) Schematic depiction of the sonority slopes of four different onset clusters. The solid red line which denotes the sonority slope of the onset clusters is a plateau in the case of *nmV* and *sfV* and it is falling in the case of *npV* and *spV*. Note that these determinations are based solely on the angle of the red line, regardless of its overall height (i.e., regardless of the intercept of the cluster). -->
 <!-- ```{r slopes4examples, fig.cap = "(ref:slopes4examples)", fig.asp = .4, out.width = '100%'} -->
@@ -943,10 +984,10 @@ The following list summarizes further concerns that were taken into consideratio
 
 *	Lastly, we avoid sequences of obstruents that differ in voicing due to the strong cross-linguistic tendency of obstruent clusters to agree in voicing (although note that German allows /\textesh v/ and /\texttslig v/ clusters while banning /\textesh f/).
 
-We thus have 29 CC sequence types that reflect 16 different combinations of classes (16 unique cells in Table \@ref(tab:targetlist), excluding differences in place of articulation), of which 7-8 are considered onset falls, 3-4 are considered onset plateaus (11 total) and 5 are considered onset rises.[^cf-18] Of the 29 different clusters, only 3 clusters regularly occur in German words, /\textesh p, \textesh m, fl/, 6 clusters are attested to some degree in German loanwords, /sp, sf, sm, vl, zv, ml/,[^cf-19] and one cluster, /\textesh f/, may be considered as similar to German licit clusters with a voiced obstruent following a voiceless one (i.e., /\textesh v/ and /\texttslig v/). 
+We thus have 29 CC sequence types that reflect 16 different combinations of classes (16 unique cells in Table \@ref(tab:targetlist), excluding differences in place of articulation), of which 7-8 are considered onset falls, 3-4 are considered onset plateaus (11 total) and 5 are considered onset rises.[^cf-plateaufall] Of the 29 different clusters, only 3 clusters regularly occur in German words, /\textesh p, \textesh m, fl/, 6 clusters are attested to some degree in German loanwords, /sp, sf, sm, vl, zv, ml/,[^cf-source] and one cluster, /\textesh f/, may be considered as similar to German licit clusters with a voiced obstruent following a voiceless one (i.e., /\textesh v/ and /\texttslig v/). 
 Thus, the experimental set contains 19 cluster types that are unattested in German words. These unattested CC types appear in 13 of the 16 unique combinations, excluding the three rising sonority clusters with a liquid in *C*~2~, /fl, vl, ml/, that are all attested in German complex onsets to some degree (yet only marginally so in the case of /vl/ and /ml/).
 
-The different CC sequences were embedded within a /CCal/ word-like frame, with the recurring *-al* rime. These /CCal/ tokens were produced with a single vowel, intended to yield monosyllabic items. We also prepared two disyllabic counterparts for each CC type---one with an epenthetic vowel, /CəCal/, and another with a prothetic vowel, /əCCal/.[^cf-20] We thus obtained 29 single-vowel target types and 58 associated bi-vocalic filler types.
+The different CC sequences were embedded within a /CCal/ word-like frame, with the recurring *-al* rime. These /CCal/ tokens were produced with a single vowel, intended to yield monosyllabic items. We also prepared two disyllabic counterparts for each CC type---one with an epenthetic vowel, /CəCal/, and another with a prothetic vowel, /əCCal/.[^cf-hebschwa] We thus obtained 29 single-vowel target types and 58 associated bi-vocalic filler types.
 
 To record the stimuli, the combined 87 word-like tokens were embedded within carrier sentences, appearing in a non-final position with broad-focus intonation in order to maintain consistent prosody. Carrier sentences were also designed to minimize potential effects of resyllabification as well as co-articulation by controlling the segmental makeup immediately preceding and following target words. 
 
@@ -959,13 +1000,13 @@ Note that since the bottom-up predictions of NAP are derived via measurements of
 We extract continuous measurements of periodic energy from acoustic signals using the *APP Detector*, a computer code that was introduced in @deshmukh2003detectionsk and developed in subsequent publications [@deshmukh2005use; @vishnubhotla2007detection], with the ability to measure the spectral distribution of periodic energy from digital audio files with a 16kHz sample-rate, effectively measuring periodic energy up to 8kHz [consider that our pitch perception range is limited to periods up to approximately 4kHz, reflecting a ceiling effect of the phase-locking of neural firing rates; @wever1937perception; @attneave1971pitch; @pressnitzer2001lower; @moore2013anintro 46]. We export the periodic energy data from the APP Detector's analysis into R [@R-base], for further data manipulation, visualization, modelling and statistics. 
 
 We sum over the different frequencies that the APP Detector measures to obtain a time series  with the sum of periodic energy over different frequencies at 10 ms intervals.
-We fit a smoothed curve to the periodic energy time series, to eliminate small-scale fluctuations in the curve's trajectory, and, finally, the sum of periodic energy is log transformed, where it is divided by a value that reflects the threshold of effective voicing periodicity, thus setting a meaningful zero for the periodic energy floor.[^cf-11] 
+We fit a smoothed curve to the periodic energy time series, to eliminate small-scale fluctuations in the curve's trajectory, and, finally, the sum of periodic energy is log transformed, where it is divided by a value that reflects the threshold of effective voicing periodicity, thus setting a meaningful zero for the periodic energy floor.[^cf-smog]
 
 ###		Perception task {#sec:ptask}
 The experiment was designed as a forced-choice 2-alternative perception task, prompting meta-linguistic syllable count judgements and recording accuracy and response time information. 
 Since all stimuli share the form /CCal/ where the rime *al* is predictable (this becomes clear to participants during the training session), we determined the zero time for valid response times at the the mid point of transition from *C*~2~ to /a/, individually for each one of the 87 stimuli. We used manual segmentation to determine this point for each target. We then excluded response times shorter than 100ms (after the mid point of transition from *C*~2~ to /a/) as too fast to be considered as valid. This led to no exclusions from Experiment 1 and to only one observation being excluded from Experiment 2.
 
-Participants were seated in a quiet room in front of a laptop computer (a MacBook Air 13-inch, Early 2014) running the experiment on OpenSesame 3.1.9 [@mathot2012opensesame], where they listened to the stimuli through a set of closed headphones (Sennhieser HD 201), fed directly from the laptop's internal audio interface. After verifying that participants share a standard understanding of the notion of the syllable with a few German examples of words with one and two syllables, they were instructed to listen to nonce words in an "unknown" foreign language (the use of a speaker with a Hebrew accent in the stimuli that were presented to German listeners was intended to further support a "foreign" type of perception). Participants were instructed to respond quickly and accurately on whether they hear one or two syllables by clicking '1' or '2' on the computer keyboard.[^cf-21] 
+Participants were seated in a quiet room in front of a laptop computer (a MacBook Air 13-inch, Early 2014) running the experiment on OpenSesame 3.1.9 [@mathot2012opensesame], where they listened to the stimuli through a set of closed headphones (Sennhieser HD 201), fed directly from the laptop's internal audio interface. After verifying that participants share a standard understanding of the notion of the syllable with a few German examples of words with one and two syllables, they were instructed to listen to nonce words in an "unknown" foreign language (the use of a speaker with a Hebrew accent in the stimuli that were presented to German listeners was intended to further support a "foreign" type of perception). Participants were instructed to respond quickly and accurately on whether they hear one or two syllables by clicking '1' or '2' on the computer keyboard.[^cf-indexfinger] 
 A training session of ten trials preceded the experimental trials, allowing the participants to familiarize with the task, and allowing the experimenter to adjust listening volume and monitor potential problems and any misunderstandings regarding the task.
 
 ##		Predictions {#sec:predictions}
@@ -2227,7 +2268,7 @@ Sibilants uniquely stand out in perception due to their distinctive high-frequen
 The first source, *sonority*, is a perceptual account that is related to the syllable. The second source, *articulation*, concerns airflow discontinuities from the perspective of articulation, echoing the formal OCP constraint in many phonological accounts [@leben1973suprasegmental; @mccarthy1979formalsk], banning two consecutive segments of the same type. The third source, *cue robustness*, is also perceptual, like sonority, yet it does not require syllables as it is based on adjacency patterns. These perspectives are complementary, and although they do not represent an exhaustive list of phonotactic pressures, we need at least these three in order to properly appreciate the phonotactic phenomenon of /s/-stop clusters.
 
 ##		Universality of sonority {#sec:projection}
-A consistent interest within theoretical phonology concerns the universality of sonority-based principles. An impressive volume of publications devoted to this question can be found in the works of Iris Berent and her colleagues, starting with @berent2007we, and followed by many subsequent studies [e.g., @berent2008language; @berent2011syllable; @berent2012language; @berent2012universalsk; @berent2013phnological; @berent2014language; @gomez2014language; @zhao2015universalsk; @berent2015role; @lennertz2015onthesonority; @berent2017origins]. Berent et al. collected mostly behavioral data from perception tasks, where subjects of various different language backgrounds were found to adhere to the SSP, even when presented with combinations that are not attested in their language. The patterns under Berent's consistent scrutiny are usually limited to a set of initial clusters with an onset rise (e.g., *blif*), an onset plateau (e.g., *bdif*) and an onset fall (e.g., *lbif*). Since /s/-clusters and sonorant plateaus are absent from these studies, Berent's experimental results with SSP-based models are largely compatible with NAP, where the hierarchy *blif* (3) $>$ *bdif* (2) $>$ *lbif* (0) is maintained in *NAP~td~* (model scores in brackets).[^cf-22] 
+A consistent interest within theoretical phonology concerns the universality of sonority-based principles. An impressive volume of publications devoted to this question can be found in the works of Iris Berent and her colleagues, starting with @berent2007we, and followed by many subsequent studies [e.g., @berent2008language; @berent2011syllable; @berent2012language; @berent2012universalsk; @berent2013phnological; @berent2014language; @gomez2014language; @zhao2015universalsk; @berent2015role; @lennertz2015onthesonority; @berent2017origins]. Berent et al. collected mostly behavioral data from perception tasks, where subjects of various different language backgrounds were found to adhere to the SSP, even when presented with combinations that are not attested in their language. The patterns under Berent's consistent scrutiny are usually limited to a set of initial clusters with an onset rise (e.g., *blif*), an onset plateau (e.g., *bdif*) and an onset fall (e.g., *lbif*). Since /s/-clusters and sonorant plateaus are absent from these studies, Berent's experimental results with SSP-based models are largely compatible with NAP, where the hierarchy *blif* (3) $>$ *bdif* (2) $>$ *lbif* (0) is maintained in *NAP~td~* (model scores in brackets).[^cf-apriori] 
 
 Berent and her colleagues present these findings in support of the innateness hypothesis, assuming that all humans share a universal linguistic knowledge, which is genetically encoded (often refereed to as *Universal Grammar* in generative traditions). Importantly, the universal grammar in the generative tradition is not dependent on functional descriptions of the sensorimotor system, allowing a grammar that is composed of formal rules and constraints that do not require a functional motivation. In respect to Berent's claims, the universality of sonority principles thus implies innate knowledge of ordinal sonority hierarchies and mechanisms that compute the sonority slopes within syllables to determine well-formedness.
 
@@ -2315,9 +2356,9 @@ Future endeavors within the framework we presented here promise to deliver many 
 
 <!-- [^cf-10]: There is, in fact, a more intricate text-tune interaction that can also lead to local "heaviness" of stressed syllables (i.e., on-line prosodic enhancements of nuclei) in order to accommodate certain tonal events in post-lexical intonation via extended duration and/or increased acoustic energy [@roettger2019tune]. -->
 
-[^cf-11]: We apply Tukey's (Running Median) Smoothing "3RS3R" to the periodic energy data. The threshold of the log transform is calculated as the maximal value obtained for voiceless portions in the set, less than 5% of the scale before transformation.
+[^cf-smog]: We apply Tukey's (Running Median) Smoothing "3RS3R" to the periodic energy data. The threshold of the log transform is calculated as the maximal value obtained for voiceless portions in the set, less than 5% of the scale before transformation.
 
-[^cf-12]: The periodic energy curve is fitted with Local Polynomial Regression Fitting (*loess*) in the figures. This is only used for visual clarity---all the data points and calculations are based on the periodic energy curve before this smoothing and after initial smoothing and log transform (see details in Subsection \@ref(sec:obtaining)).
+[^cf-loess]: The periodic energy curve is fitted with Local Polynomial Regression Fitting (*loess*) in the figures. This is only used for visual clarity---all the data points and calculations are based on the periodic energy curve before this smoothing and after initial smoothing and log transform (see details in Subsection \@ref(sec:obtaining)).
 
 <!-- [^cf-13]: Note that some rhotics, which are traditionally considered liquids, may in fact belong with the vocoid consonants (e.g., most of the English rhotics). However, we ignore this issue here since we do not include rhotics in this paper. -->
 
@@ -2327,19 +2368,21 @@ Future endeavors within the framework we presented here promise to deliver many 
 
 [^cf-reconciliation]: The symbolic sonority hierarchy in NAP reconciles perceptual and articulatory approaches to sonority by modelling their mutual contribution to enhancing pitch intelligibility (or periodic energy mass in acoustic terms). This hierarchy is similar to a few proposals for sonority hierarchies that combined levels of voicing/periodicity with degree of vocal tract opening [e.g., @lass1988phonology; @miller2012sonority; and @sharma2018significance]. Such hierarchies may be also seen as compatible with source-filter models of speech [e.g., @fant2000source], where the source controls voicing and the filter controls opening.
 
-[^cf-15]: A slightly similar calculation can be found in Fullwood's [-@fullwood2014perceptual] *Sonority Angle*, although with different grounds, applications and outcomes.
+[^cf-angle]: A slightly similar calculation can be found in Fullwood's [-@fullwood2014perceptual] *Sonority Angle*, although with different grounds, applications and outcomes.
 
 <!-- [^cf-16]: The more relevant range when glides are excluded is from -1 to 5. -->
 
 <!-- [^cf-17]: For more accurate values of the CoM distance in these examples: sfal = 48.85 ms; spal = 50.85 ms; nmal = 93.68 ms; and npal = 167.74 ms. -->
 
-[^cf-18]: Depending on whether fricatives are considered higher or similar in sonority to stops, clusters of the type fricative-stop may be considered as either an onset fall or an onset plateau.
+[^cf-peak]: Note that peak measurements can be advantageous in that they tend to appear at the center of segmental units [minima in consonants and maxima in vowels; see @parker2008sound], overcoming some of the problems related to segmentation, given that peaks are less affected by determination of segmental boundaries.
 
-[^cf-19]: Based primarily on @van2012sonority.
+[^cf-plateaufall]: Depending on whether fricatives are considered higher or similar in sonority to stops, clusters of the type fricative-stop may be considered as either an onset fall or an onset plateau.
 
-[^cf-20]: The schwa in this case represents a weak (unstressed) /e/ vowel from the 5-vowel inventory of Modern Hebrew.
+[^cf-source]: Based primarily on @van2012sonority.
 
-[^cf-21]: Participants used their left index finger to choose '1' and their right index finger to choose '2', using ‘F' and ‘J' buttons respectively. The respective buttons were covered with salient red-on-white ‘1' and ‘2' stickers (the rest of the laptop's keys are all white-on-black by design).
+[^cf-hebschwa]: The schwa in this case represents a weak (unstressed) /e/ vowel from the 5-vowel inventory of Modern Hebrew.
+
+[^cf-indexfinger]: Participants used their left index finger to choose '1' and their right index finger to choose '2', using ‘F' and ‘J' buttons respectively. The respective buttons were covered with salient red-on-white ‘1' and ‘2' stickers (the rest of the laptop's keys are all white-on-black by design).
 <!-- ‘F' and ‘J' buttons denote the resting place of the two index fingers in a QWERTY keyboard layout when using standard typing methods (e.g., Touch typing).  -->
 <!-- In the experiment, these buttons were covered with salient red-on-white ‘1' and ‘2' stickers. -->
 
@@ -2349,7 +2392,7 @@ Future endeavors within the framework we presented here promise to deliver many 
 
 <!-- [^cf-design]: Recall that the experiment is designed as a syllable count task which allows us to interpret response times as evidence of the processing cost that is associated with parsing incoming speech into a single syllable. This design has the advantage of a relatively percise targeting of sonority's contribution to phonotactics, by observing syllabic parsing behaviour while controlling speech sound combinations. These results should not be interpreted as reflecting well-formedness in a grammar-holistic manner thuough. This would not be an appropriate interpretation of our experimental results which only target the cognitive cost of syllabic parsing. Other functional pressures on phonotactics are always at work at the same time, and they must be taken into account separately, and inegrally, when explaining phonotactics from a holistic point of view.  -->
 
-[^cf-22]: *NAP~bu~* cannot make such determinations based on symbolic representations, but it should be expected to generally follow the same trends in the vast majority of cases.
+[^cf-apriori]: *NAP~bu~* cannot make such determinations based on symbolic representations, but it should be expected to generally follow the same trends in the vast majority of cases.
 
 \newpage
 
